@@ -17,6 +17,7 @@ ncmpc 0.16 - not yet released
 * screen_queue: move ranges with one single "move" command
 * status_bar: fix display_remaining_time while seeking
 * status_bar: display elapsed time event when total time is unknown
+* charset: added support for zero-width characters
 
 
 ncmpc 0.15 - 2009-09-24
